minor UI fix for keeping text-wrapped ingredients out of the amount column

--- a/src/style/defaults.css
+++ b/src/style/defaults.css
@@ -93,6 +93,17 @@ ul {
 
 .drink-ingredient-list li {
   padding: 0 10px 5px 10px;
+  justify-content: start;
+  display: grid;
+}
+
+.drink-ingredient__amount {
+  grid-column-start: 1;
+}
+
+.drink-ingredient__name {
+  grid-column-start: 2;
+  padding-left: 0.5em;
 }
 
 .source {
